2013-08-22  David S. Miller  <davem@davemloft.net>

	* po/ca.po: Update Catalan translation from translation project.
	* po/uk.po: Add Ukrainian translations from translation project.

2013-08-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15797]
	* math/s_fdim.c (__fdim): Check for infinite arguments if result
	is infinite, not alongside NaN test.
	* math/s_fdimf.c (__fdimf): Likewise.
	* math/s_fdiml.c (__fdiml): Likewise.
	* math/libm-test.inc (fdim_test_data): Add more tests.  Test that
	errno is unchanged.

2013-08-21   Ondřej Bílka  <neleai@seznam.cz>

	* argp/argp-help.c: Fix typos.
	* crypt/speeds.c: Likewise.
	* csu/check_fds.c: Likewise.
	* elf/dl-load.c: Likewise.
	* elf/dl-open.c: Likewise.
	* elf/reldep3.c: Likewise.
	* elf/reldep.c: Likewise.
	* elf/sprof.c: Likewise.
	* iconv/iconv_charmap.c: Likewise.
	* iconv/skeleton.c: Likewise.
	* iconv/strtab.c: Likewise.
	* io/lockf64.c: Likewise.
	* libio/libioP.h: Likewise.
	* resolv/gai_notify.c: Likewise.
	* resolv/ns_name.c: Likewise.
	* resolv/ns_samedomain.c: Likewise.
	* resolv/res_send.c: Likewise.
	* stdlib/random.c: Likewise.
	* sunrpc/rpc/xdr.h: Likewise.
	* sysdeps/i386/fpu/fraiseexcpt.c: Likewise.
	* sysdeps/i386/i686/multiarch/memcmp-sse4.S: Likewise.
	* sysdeps/i386/i686/multiarch/memset-sse2-rep.S: Likewise.
	* sysdeps/i386/i686/multiarch/memset-sse2.S: Likewise.
	* sysdeps/i386/i686/multiarch/strcat-sse2.S: Likewise.
	* sysdeps/i386/i686/multiarch/strcmp-sse4.S: Likewise.
	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S: Likewise.
	* sysdeps/i386/i686/multiarch/strcpy-sse2.S: Likewise.
	* sysdeps/mach/hurd/check_fds.c: Likewise.
	* sysdeps/powerpc/powerpc32/cell/memcpy.S: Likewise.
	* sysdeps/powerpc/powerpc32/fpu/setjmp.S: Likewise.
	* sysdeps/powerpc/powerpc32/power4/memcmp.S: Likewise.
	* sysdeps/powerpc/powerpc32/power7/memcmp.S: Likewise.
	* sysdeps/powerpc/powerpc32/setjmp.S: Likewise.
	* sysdeps/powerpc/powerpc64/cell/memcpy.S: Likewise.
	* sysdeps/pthread/aio_notify.c: Likewise.